# snnlib

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py  test.ipynb
cmake/: snnlib-config.cmake.in  snnlib.cmake
conda.recipe/: meta.yaml
demos/: CMakeLists.txt  Makefile  cosknng.cpp
python_bindings/: CMakeLists.txt  bindings.cpp
snnlib/: BitVector.h  CMakeLists.txt  CosKnnIndex.h  Counter.h  KVVector.h  KVVectorView.h  Timer.h  basetypes.h  csr.h  pqueue.h  sort.h  version.h
tests/: CMakeLists.txt  test_bit_vector.cpp  test_cosknnindex.cpp  test_csr.cpp  test_kv_vector.cpp  test_kvv_view.cpp  test_pqueue.cpp  test_queue.cpp  test_sort.cpp
tests/data/: l2ap100.csr  l2ap1k.bcsr  l2ap1k.bijv  l2ap1k.clu  l2ap1k.csr  l2ap1k.ijv
